--- a/.env
+++ b/.env
@@ -26,5 +26,5 @@ APP_SECRET=a525ff370f8a59364002ac505024e1af
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-DATABASE_URL="mysqli://root@localhost:3306/crud?serverVersion=15&charset=utf8"
+DATABASE_URL="mysqli://root@localhost:3306/crud?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 ###< doctrine/doctrine-bundle ###
